--- a/sass/forms.scss
+++ b/sass/forms.scss
@@ -23,7 +23,7 @@ input[type="checkbox"] {
 }
 
 .form-control {
-  display: block;
+  display: inline-block;
   width: 100%;
   min-height: 25px;
   padding: $padding-less $padding;
